<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.collegetips.MainActivity"
    android:background="#FFE0B2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        style="@style/TextHead"
        android:text="@string/tips"
        android:layout_gravity="center_horizontal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black"
            android:layout_marginBottom="10dp"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/fotoloading"
            android:scaleType="fitXY"
            android:id="@+id/mind"/>
        <TextView
            style="@style/TextText"
            android:text="@string/first_tip_head"/>
        <TextView
            style="@style/TextBody"
            android:text="@string/first_tip"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/fotoloading"
            android:scaleType="fitXY"
            android:id="@+id/conversation"/>

        <Gallery
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gallery" />

        <TextView
            style="@style/TextText"
            android:text="@string/second_tip_head"/>
        <TextView
            style="@style/TextBody"
            android:text="@string/second_tip"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/fotoloading"
            android:id="@+id/good"/>
        <TextView
            style="@style/TextText"
            android:text="@string/third_tip_head"/>
        <TextView
            style="@style/TextBody"
            android:text="@string/third_tip"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/fotoloading"
            android:scaleType="fitXY"
            android:id="@+id/organization"/>
        <TextView
            style="@style/TextText"
            android:text="@string/fourth_tip_head"/>
        <TextView
            style="@style/TextBody"
            android:text="@string/fourth_tip"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:src="@drawable/fotoloading"
            android:id="@+id/study_abroad"/>
        <TextView
            style="@style/TextText"
            android:text="@string/fifth_tip_head"/>
        <TextView
            style="@style/TextBody"
            android:text="@string/fifth_tip"/>
        <Button
            style="@style/TextText"
            android:id="@+id/moreInfo"
            android:text="@string/more_tips"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:onClick="moreTips"/>

        <EditText
            style="@style/InputTip"
            android:inputType="textMultiLine"
            android:hint="@string/enter_tip"
            android:id="@+id/submittedTip"/>
        <Button
            style="@style/TextText"
            android:text="@string/submit_tip"
            android:onClick="submitTip"/>
    </LinearLayout>
</ScrollView>
